--- a/assets/scss/_app.scss
+++ b/assets/scss/_app.scss
@@ -13,6 +13,7 @@
 .near-black { color: #111111 }
 .fill-dark { fill: color-palette("dark") }
 .fill-dust { fill: color-palette("light") }
+.fill-white { fill: white }
 .bg-green { background-color: #019934 }
 .bg-none { background-color: transparent; }
 .bg-yellow { background-color: #FFD700 }
@@ -69,6 +70,7 @@
     top: 0;
     width: 100%;
     transform: translateY(calc(var(--scrollPos, 0) * var(--offset, 0)));
+    transition: 35ms ease-in-out;
 
     @media (prefers-reduced-motion: reduce) {
       transform: translateY(0);
@@ -166,10 +168,4 @@ hr {
   position: relative;
   margin: 30px auto;
   opacity: 1 !important;
-}
-
-.mask-1 {
-  mask-image: url("data:image/svg+xml,%3Csvg viewBox='0 3.688 227.754 92.656' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3C/defs%3E%3Cpolygon style='stroke-width: 4px;' points='227.754 96.344 0 96.344 0 55.626 57.843 3.688 96.405 29.932 227.767 29.932'%3E%3C/polygon%3E%3C/svg%3E");
-  mask-repeat: no-repeat;
-  mask-size: cover;
 }
