--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -37,7 +37,7 @@ $enable-negative-margins: true;
 $primary: #019934;
 $secondary: #7f7064;
 $dark: color-palette("dark");
-
+$input-border-radius: 0;
 html {
   font-family: "Inter";
 }
