fix: seo stuff favicon meta usw

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -34,7 +34,7 @@
   src: url("~/assets/fonts/Inter-Bold.ttf") format("truetype");
 }
 $enable-negative-margins: true;
-$primary: #019934;
+$primary: #01832c;
 $secondary: #7f7064;
 $dark: color-palette("dark");
 $input-border-radius: 0;
