--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,7 +9,7 @@ $palette-colors: (
   "base-dark": #f1cab9,
   "base-darker": #e3b6a3,
   "darker": #d39a87,
-  "dark": #b87e70
+  "dark": #6a453c
 )!default;
 
 @function color-palette($key: "base") {
