--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -20,6 +20,7 @@ $palette-colors: (
 
 @import "bootstrap/scss/variables"; // Required
 @import "bootstrap/scss/mixins"; // Required
+@import "bootstrap/scss/maps";
 @import "bootstrap/scss/utilities"; // Required
 
 // Layouts & Components
