--- a/assets/scss/_app.scss
+++ b/assets/scss/_app.scss
@@ -70,7 +70,7 @@
     top: 0;
     width: 100%;
     transform: translateY(calc(var(--scrollPos, 0) * var(--offset, 0)));
-    transition: 35ms ease-in-out;
+    transition: transform 0.6s cubic-bezier(0.5, 1, 0.89, 1);
 
     @media (prefers-reduced-motion: reduce) {
       transform: translateY(0);
